2008-03-02  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_make_directory),
	(g_vfs_backend_ftp_class_init):
	implement make_directory

2008-03-02  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_delete),
	(g_vfs_backend_ftp_class_init):
	implement delete

2008-03-02  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c:
	redo error handling: We now store the error and the job in the
	FtpConnection. This way we don't have to handle errors in the outer
	functions and can just "if (conn->error) return FALSE;" in the inner
	functions.

2008-03-01  David Zeuthen  <davidz@redhat.com>

	* daemon/gvfsbackendcdda.c (do_mount): Avoid calling
	cddio_cddap_close() twice on an error path.

2008-03-01  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (run_list_command):
	close the data connection before trying to receive the OK. Some
	servers send it out only after the connection was closed properly and
	otherwise cause stalls.

2008-03-01  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c: (do_mount):
	use 0 as port in the keyring when it's the default ftp port. Stops the
	access dialog fro printing the port name.

2008-03-01  Bastien Nocera  <hadess@hadess.net>

	* daemon/gvfsbackendobexftp.c (_query_file_info_helper):
	Fix another case where the icon name was wrong for the
	root folder (Helps: #519369)

2008-03-01  Benjamin Otte  <otte@gnome.org>

	* daemon/Makefile.am:
	* daemon/ParseFTPList.c:
	* daemon/ParseFTPList.h:
	* daemon/gvfsbackendftp.c: (ftp_connection_cd), (process_line),
	(run_list_command), (do_query_info), (do_enumerate):
	rewrite directory enumeration and query_info by using the LIST parsing
	code from Mozilla. It was the only code I could find that was LGPL
	licensed, even though it looks way out of date.
	Also, error messages are handled way better and the code even copes
	somewhat with symlinks.

2008-02-29  Bastien Nocera  <hadess@hadess.net>
